Update : 애플뮤직 임베드 완료, 헤더 마무리 중

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,9 @@ body {
   border: 5px solid #dadada;
   background-color: #dadada;
 }
+
+.header-color {
+  background-color: #2e5d4b;
+  width: 100%;
+  height: 10%;
+}
